Update and rename github-actions-demo.yml to github-actions-selenium.yml

--- a/.github/workflows/github-actions-selenium.yml
+++ b/.github/workflows/github-actions-selenium.yml
@@ -27,6 +27,8 @@ jobs:
         
       - name: Commit and Push The Results From Python Selenium Action
         run: |
-         git add -A
-         git commit -m "GitHub Actions Results added"
-         git push
+          git config --global user.email "thalesgtav@gmail.com"
+          git config --global user.name "thaleshqs"
+          git add -A
+          git commit -m "GitHub Actions Results added"
+          git push
