--- a/.github/workflows/github-actions-selenium.yml
+++ b/.github/workflows/github-actions-selenium.yml
@@ -19,6 +19,8 @@ jobs:
        # Need to fetch reqs if needed
       - name: Installing all necessary packages
         run: pip install chromedriver-autoinstaller selenium pyvirtualdisplay
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Install xvfb
         run: sudo apt-get install xvfb
 
