--- a/.github/workflows/github-actions-selenium.yml
+++ b/.github/workflows/github-actions-selenium.yml
@@ -25,8 +25,9 @@ jobs:
         run: sudo apt-get install xvfb
 
       - name: Running the Python script
-        run: python main.py
-        run: python tests/Selenium-Template.py
+        run:
+          python main.py
+          python tests/Selenium-Template.py
         
       - name: Commit and Push The Results From Python Selenium Action
         run: |
