--- a/.github/workflows/selenium-test.yaml
+++ b/.github/workflows/selenium-test.yaml
@@ -23,6 +23,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Installing all necessary packages
+      run: pip install chromedriver-autoinstaller selenium pyvirtualdisplay
+    - name: Install xvfb
+      run: sudo apt-get install xvfb
+
 
     - name: Install dependencies
       run: |
