--- a/.github/workflows/selenium-test.yaml
+++ b/.github/workflows/selenium-test.yaml
@@ -6,11 +6,8 @@ on:
       - main
 
 jobs:
-  test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+  test-ubuntu:
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -24,9 +21,7 @@ jobs:
     - name: Installing all necessary packages
       run: |
         pip install chromedriver-autoinstaller selenium pyvirtualdisplay
-        if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
-          sudo apt-get install xvfb
-        fi
+        sudo apt-get install xvfb
 
     - name: Install dependencies
       run: |
@@ -41,17 +36,75 @@ jobs:
       run: sleep 10
 
     - name: Run Selenium tests
-      run: |
-        if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
-          python tests/selenium_tests.py
-        elif [ "${{ matrix.os }}" == "windows-latest" ]; then
-          # Add Windows specific commands
-          echo "Running on Windows"
-        elif [ "${{ matrix.os }}" == "macos-latest" ]; then
-          # Add macOS specific commands
-          echo "Running on macOS"
-        fi
-    
+      run: python tests/selenium_tests.py
+
     - name: Run Unit tests
+      run: python tests/unit_tests.py
+
+  test-windows:
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+
+    - name: Installing all necessary packages
       run: |
-        python tests/unit_tests.py
+        pip install chromedriver-autoinstaller selenium pyvirtualdisplay
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Start Flask Application
+      run: |
+        python main.py &
+
+    - name: Wait for Flask to start
+      run: sleep 10
+
+    - name: Run Selenium tests
+      run: echo "Add Windows-specific Selenium test command here"
+
+    - name: Run Unit tests
+      run: echo "Add Windows-specific unit test command here"
+
+  test-macos:
+    runs-on: macos-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+
+    - name: Installing all necessary packages
+      run: |
+        pip install chromedriver-autoinstaller selenium pyvirtualdisplay
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Start Flask Application
+      run: |
+        python main.py &
+
+    - name: Wait for Flask to start
+      run: sleep 10
+
+    - name: Run Selenium tests
+      run: echo "Add macOS-specific Selenium test command here"
+
+    - name: Run Unit tests
+      run: echo "Add macOS-specific unit test command here"
