--- a/.github/workflows/selenium-and-unit-tests.yaml
+++ b/.github/workflows/selenium-and-unit-tests.yaml
@@ -6,22 +6,28 @@ on:
       - main
 
 jobs:
-  test-ubuntu:
+  test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
 
     - name: Installing all necessary packages
       run: |
         pip install chromedriver-autoinstaller selenium pyvirtualdisplay
-        sudo apt-get install xvfb
+        if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
+          sudo apt-get install xvfb
+        fi
 
     - name: Install dependencies
       run: |
@@ -35,76 +41,15 @@ jobs:
     - name: Wait for Flask to start
       run: sleep 10
 
-    - name: Run Selenium tests
-      run: python tests/selenium_tests.py
-
-    - name: Run Unit tests
-      run: python tests/unit_tests.py
-
-  test-windows:
-    runs-on: windows-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.8
-
-    - name: Installing all necessary packages
+    - name: Run Tests
       run: |
-        pip install chromedriver-autoinstaller selenium pyvirtualdisplay
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Start Flask Application
-      run: |
-        python main.py &
-
-    - name: Wait for Flask to start
-      run: sleep 10
-
-    - name: Run Selenium tests
-      run: python tests\selenium_tests.py
-
-    - name: Run Unit tests
-      run: python tests\unit_tests.py
-
-  test-macos:
-    runs-on: macos-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.8
-
-    - name: Installing all necessary packages
-      run: |
-        pip install chromedriver-autoinstaller selenium pyvirtualdisplay
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Start Flask Application
-      run: |
-        python main.py &
-
-    - name: Wait for Flask to start
-      run: sleep 10
-
-    - name: Run Selenium tests
-      run: python tests/selenium_tests.py
-
-    - name: Run Unit tests
-      run: python tests/unit_tests.py
+        if [ "${{ matrix.os }}" == "windows-latest" ]; then
+          python tests/selenium_tests_windows.py
+          python tests/unit_tests_windows.py
+        elif [ "${{ matrix.os }}" == "macos-latest" ]; then
+          python tests/selenium_tests_macos.py
+          python tests/unit_tests_macos.py
+        else
+          python tests/selenium_tests.py
+          python tests/unit_tests.py
+        fi
