--- a/.github/workflows/selenium-and-unit-tests.yaml
+++ b/.github/workflows/selenium-and-unit-tests.yaml
@@ -44,10 +44,10 @@ jobs:
     - name: Run Tests
       run: |
         if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          python tests/selenium_tests_windows.py
+          python tests/selenium_tests.py
           python tests/unit_tests.py
         elif [ "${{ matrix.os }}" == "macos-latest" ]; then
-          python tests/selenium.py
+          python tests/selenium_tests.py
           python tests/unit_tests.py
         else
           python tests/selenium_tests.py
